2005-12-13  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.ctor): Ensure that 'name' contains only the last part
	of the full (namespace + name) dotted name.

2005-12-12  Ankit Jain  <jankit@novell.com>

	* TypeDef.cs (TypeDef.Define): Ensure nested visibility for a nested class.
	(TypeDef.NestedFullName): New.

2005-12-09  Ankit Jain  <jankit@novell.com>

	* MethodDef.cs (MethodDef.GenParamCount): typar_list can be null.

2005-12-09  Ankit Jain  <jankit@novell.com>

	* ITypeRef.cs (ITypeRef.GetMethodRef): Add 'gen_param_count' param.
	* Sentinel.cs (Sentinel.GetMethodRef): Update.
	* GlobalMethodRef.cs (GlobalMethodRef.ctor): Add 'gen_param_count' param.
	(GlobalMethodRef.Resolve): Update usage of MethodDef.CreateSignature .
	* TypeDef.cs (TypeDef.GetGenericParamNum): New.
	(TypeDef.DefineContents): Update usage of ITypeRef.GetMethodRef .
	* ExternTypeRefInst.cs (ExternTypeRefInst.ctor): Add parameter for list of type
	parameters (type_list).
	(ExternTypeRefInst.Clone): Clone type_list also.
	(ExternTypeRefInst.Resolve): Resolve the list of type parameters, and create
	instance of PEAPI.GenericTypeInst instead of PEAPI.ClassRefInst .
	(ExternTypeRefInst.GetMethodRef): Update.
	* GenericTypeInst.cs (GenericTypeInst.GetMethodRef): Update signature. Update
	usage of TypeSpecMethodRef.ctor .
	* MethodRef.cs (MethodRef.ctor): Add 'gen_param_count' param.
	(MethodRef.Resolve): Throw exception for non-existant owner. Update usage of
	MethodDef.CreateSignature .
	* ExternMethodRef.cs (ExternMethodRef.ctor): Add 'gen_param_count' param.
	(ExternMethodRef.Resolve): Update usage of PEFile.AddMethodToTypeSpec and .AddMethod
	* GenericMethodRef.cs (GenericMethodRef.PeapiMethod): Return PEAPI.Method obtained in 
	.Resolve .
	* GenericTypeRef.cs (GenericTypeRef.GetMethodRef): Update.
	* MethodPointerTypeRef.cs (MethodPointerTypeRef.GetMethodRef): Likewise.
	* TypeSpecMethodRef.cs (TypeSpecMethodRef.ctor): Add 'gen_param_count' param.