@@ -1,9 +1,14 @@
 //Tests dotted names (namespace, class names)
 //It should emit namespace = A.B.C and type name = D
+//For E.F, namespace = E, name = F
 
-//.assembly extern mscorlib
-//{
-//}
+.assembly extern mscorlib
+{
+}
+
+.assembly Output 
+{
+}
 
 .module Output
 
@@ -15,3 +20,9 @@
 }
 
 }
+
+.class public auto autochar sealed beforefieldinit E.F 
+       extends [mscorlib]System.Object
+{
+}
+
