@@ -1,3 +1,7 @@
+2005-12-14  Ankit Jain  <jankit@novell.com>
+
+	* dotted-names.il: Add test for class with no explicit namespace.
+
 2005-12-13  Ankit Jain  <jankit@novell.com>
 
 	* dotted-names.il: New. Test for dotted names in namespace, class.
