@@ -1,3 +1,7 @@
+2005-12-14  Ankit Jain  <jankit@novell.com>
+
+	* TypeDef.cs (TypeDef.ctor): name_space can be null.
+
 2005-12-13  Ankit Jain  <jankit@novell.com>
 
 	* TypeDef.cs (TypeDef.ctor): Ensure that 'name' contains only the last part
